<resources>
    <string name="app_name">Saving by Shopping</string>
    <string name="tab_home">Home</string>
    <string name="tab_saving">Saving</string>
    <string name="tab_profile">Profile</string>
    <string name="under_maintenance">Under Maintenance</string>
    <string name="fitur_machine_learning"> Fitur Machine Learning</string>"
    <string name="title_budget">Your Budget</string>
    <string name="month">Month</string>
    <string name="amount_budget">Rp 0</string>
    <string name="fitur_HealthBudget"> Fitur Health Budget</string>"
    <string name="total_saving">Total Saving</string>
    <string name="overall">Overall</string>
    <string name="btn_withdraw">Withdraw</string>
    <string name="contoh">Contoh</string>
    <string name="tracking_saving">Tracking Saving</string>
    <string name="note_btnTrackingSaving">From Discounts</string>
    <string name="add_shopping">Add Shopping</string>
    <string name="note_btnAddShopping">Track Discounts</string>
    <string name="title_shoppingReceipt">Shopping Receipt</string>
    <string name="hint_namaToko">Nama Toko</string>
    <string name="hint_date">Date</string>
    <string name="hint_email">Email</string>
    <string name="btn_addShopping">Create Shopping Item</string>
    <string name="success_addingShoppingReceipt">Success Adding Shopping Receipt</string>
    <string name="example">Example</string>
    <string name="note_titleProfileImgAddItemShop">Track your discount and shopping</string>
    <string name="tv_toko1">Sugiono</string>
    <string name="tv_toko2">Shop</string>
    <string name="btn_addItem">Add Item</string>
    <string name="note_emptyList">You do not have items in your shop list</string>
    <string name="tv_discount">Set Discount for All Item</string>
    <string name="tv_dicountPerItem">Setting Discount</string>
    <string name="tv_afterDiscount">Price After Discount</string>
    <string name="button_Check">Check</string>
    <string name="isi_diskon">fill discount</string>
    <string name="percentage">%</string>
    <string name="note_tvTotalSaving">Total Savings ( Discount )</string>
    <string name="tv_totalShopping">Total Shopping</string>
    <string name="btn_checkout">Checkout</string>
    <string name="cancel_dialog">Cancel Dialog</string>
    <string name="title_dialogItem">Add Shopping Item</string>
    <string name="title_itemDetails">ITEM DETAILS</string>
    <string name="tv_itemName">Item Name</string>"
    <string name="hint_namaItem">Nama Item</string>
    <string name="jenis_produk">Product Type</string>
    <string name="button_plus">button plus</string>
    <string name="button_minus">button minus</string>
    <string name="qty">0</string>
    <string name="tv_qty">QTY</string>
    <string name="price_detail">PRICE DETAILS</string>
    <string name="original_price">Original Price</string>
    <string name="hint_inputManually">Input Manually</string>
    <string name="tv_specialCondition">SPECIAL CONDITION</string>
    <string name="none">None</string>
    <string name="rb_buy">Buy</string>
    <string name="tv_free">Free</string>
    <string name="no_discount">No Discount</string>
    <string name="save">Save</string>
    <string name="error_namaToko">Nama Toko Tidak Boleh Kosong</string>
    <string name="error_item">Item Masih Kosong</string>
    <string name="error_price">Original Price Masih Kosong</string>
    <string name="error_jenisProduk">Jenis Produk Masih Kosong</string>
    <string name="error_formatEmail">Format Email Tidak Valid</string>
    <string name="error_email">Email Tidak Boleh Kosong</string>
    <string name="button_cancel">Button Cancel Percentage</string>
    <string name="total_icon">Title Total Icon</string>
    <string name="tv_TotalPrice">Total Price</string>
    <string name="tv_TotalSavingAmount">+ Rp 0</string>
    <string name="error_afterPrice">Masukkan Harga Setelah Diskon Dahulu</string>
    <string name="error_notBigger">Harga Tidak Boleh Lebih Besar dari Harga Original</string>
    <string name="title_itemList">Nama Item</string>
    <string name="jumlahQty">X Pcs</string>
    <string name="img_itemlist">Image Item List</string>
    <string name="kosong"></string>
    <string name="error_percentage">Input Nilai 1 - 99</string>
    <string name="tv_dialogSuccess1">Thank You !</string>
    <string name="txt_btnTrackingSaving">Tracking Saving</string>
    <string name="tv_dialogSuccess2">The shopping receipt has been added.</string>
    <string name="title_tracking_saving1">Tracking</string>
    <string name="title_tracking_saving2">Saving</string>
    <string name="date_txt">MTH 20XX</string>
    <string name="tv_accum_discount">Accumulated Discount</string>
    <string name="accumulated_discount">Accumulated Discount</string>
    <string name="button_calendar">calendar button</string>
    <string name="check_detail">Check Detail > </string>
    <string name="statistic">Statistic</string>
    <string name="coming_soon">Coming Soon</string>


</resources>