<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backround_latar"
    tools:context=".ui.addShoppingList.AddShoppingFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/title_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.025" />

    <TextView
        android:id="@+id/tv_titleAddShopping"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:fontFamily="@font/dm_sans_bold"
        android:text="@string/title_shoppingReceipt"
        android:textAlignment="center"
        android:textColor="@color/hijau_gelap"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@+id/title_guideline" />

    <!-- Edit Text Nama Toko-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layoutNamaToko"
        style="@style/EditText.Open"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="20dp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_titleAddShopping"
        app:startIconDrawable="@drawable/store_icon">

        <com.example.savingbyshopping.utils.EditTextCustom
            android:id="@+id/ed_namaToko"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:hint="@string/hint_namaToko"
            android:inputType="text"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            tools:ignore="TextContrastCheck" />


    </com.google.android.material.textfield.TextInputLayout>

    <!-- Edit text untuk Date ( LOCK )-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layoutDate"
        style="@style/EditText.Lock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="20dp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_layoutNamaToko"
        app:startIconDrawable="@drawable/date_icon">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_date"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:enabled="false"
            android:gravity="center_vertical"
            android:hint="@string/hint_date"
            android:inputType="none"
            android:paddingTop="0dp"
            android:paddingBottom="0dp" />


    </com.google.android.material.textfield.TextInputLayout>

    <!--Edit text untuk Email-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layoutEmail"
        style="@style/EditText.Open"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="20dp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_layoutDate"
        app:startIconDrawable="@drawable/email_icon">

        <com.example.savingbyshopping.utils.EmailCustomText
            android:id="@+id/ed_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_addShopping"
        style="@style/ButtonApp.versi1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:text="@string/btn_addShopping"
        app:layout_constraintTop_toBottomOf="@+id/input_layoutEmail" />


</androidx.constraintlayout.widget.ConstraintLayout>